--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "cross-env": "^7.0.3",
         "html-webpack-plugin": "^4.5.0",
         "webpack": "^5.10.0",
-        "webpack-cli": "^4.2.0",
+        "webpack-cli": "3.3.12",
         "webpack-dev-server": "^3.11.0"
     }
 }
