--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
+        "css-loader": "^5.0.1",
+        "file-loader": "^6.2.0",
+        "html-loader": "^1.3.2",
         "html-webpack-plugin": "^4.5.0",
+        "less": "^3.12.2",
+        "less-loader": "^7.1.0",
+        "style-loader": "^2.0.0",
+        "url-loader": "^4.1.1",
         "webpack": "^5.10.0",
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "^3.11.0"
