--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "build": "cross-env NODE_ENV=production webpack --progress"
     },
     "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-loader": "7.1.5",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
         "cross-env": "^7.0.3",
         "css-loader": "^5.0.1",
         "file-loader": "^6.2.0",
@@ -22,5 +26,9 @@
         "webpack": "^5.10.0",
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "^3.11.0"
+    },
+    "dependencies": {
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
     }
 }
