--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-loader": "7.1.5",
+        "babel-plugin-import": "^1.13.3",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "clean-webpack-plugin": "^3.0.0",
         "cross-env": "^7.0.3",
         "css-loader": "^5.0.1",
         "file-loader": "^6.2.0",
@@ -24,12 +27,15 @@
         "style-loader": "^2.0.0",
         "url-loader": "^4.1.1",
         "webpack": "^5.10.0",
+        "webpack-bundle-analyzer": "^4.2.0",
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "^3.11.0"
     },
     "dependencies": {
+        "antd": "^4.9.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-loadable": "^5.5.0",
         "react-router-dom": "^5.2.0"
     }
 }
