--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "my-webpack1",
+    "name": "webpack-for-react",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "author": "Zion0707",
     "license": "ISC",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development webpack-dev-server",
+        "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
         "build": "cross-env NODE_ENV=production webpack --progress"
     },
     "devDependencies": {
@@ -24,6 +24,8 @@
         "html-webpack-plugin": "^4.5.0",
         "less": "^3.12.2",
         "less-loader": "^7.1.0",
+        "mini-css-extract-plugin": "^1.3.3",
+        "optimize-css-assets-webpack-plugin": "^5.0.4",
         "style-loader": "^2.0.0",
         "url-loader": "^4.1.1",
         "webpack": "^5.10.0",
