--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
         "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
         "build": "cross-env NODE_ENV=production webpack --progress"
     },
+    "dependencies": {
+        "antd": "^4.9.2",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-loadable": "^5.5.0",
+        "react-router-dom": "^5.2.0"
+    },
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-loader": "7.1.5",
@@ -17,6 +24,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^7.0.0",
         "cross-env": "^7.0.3",
         "css-loader": "^5.0.1",
         "file-loader": "^6.2.0",
@@ -32,12 +40,5 @@
         "webpack-bundle-analyzer": "^4.2.0",
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "^3.11.0"
-    },
-    "dependencies": {
-        "antd": "^4.9.2",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-loadable": "^5.5.0",
-        "react-router-dom": "^5.2.0"
     }
 }
