--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-3": "^6.24.1",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^7.0.0",
         "cross-env": "^7.0.3",
