--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "webpack": "^5.10.0",
         "webpack-bundle-analyzer": "^4.2.0",
         "webpack-cli": "3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^5.7.0"
     }
 }
