--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-loadable": "^5.5.0",
-        "react-router-dom": "^5.2.0"
+        "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
