--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "build": "cross-env NODE_ENV=production webpack --progress"
     },
     "dependencies": {
+        "@tweenjs/tween.js": "^18.6.4",
         "antd": "^4.9.2",
+        "babel-plugin-transform-runtime": "^6.23.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-loadable": "^5.5.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
-        "redux": "^4.0.5"
+        "redux": "^4.0.5",
+        "three": "^0.126.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
